[package]
name = "Q3"
version = "0.1.1"
authors = ["Talha-Tanveer <talhatanveer10@gmail.com>"]
edition = "2018"
description = "This library crate contains a module and a sub module, a function is present in this sub module. To use this crate write thses lines in main.rs file. 'extern crate Q3;' , 'Q3::fruit_and_vegetable_shop::fruit_corner::types_of_oranges();' "
license = "MIT"
repository = "https://github.com/Talha-Tanveer/1st_rust_repository"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
